# Thermal_modified

./: .gitignore  24104186.xml  Taskfile.yml  main_mock.py  multiproc_log.txt  package-lock.json  package.json
backend/: index.js  package-lock.json  package.json  tsconfig.json
backend/lib/: getApi.js
backend/src/: getApi.ts  index.ts
cpp/: CMakeLists.txt
cpp/inc/: add.hpp
cpp/src/: add.cpp
cpp/tests/: test.cpp
frontend/: package-lock.json  package.json
frontend/src/: App.js
mocks/: mock_camera.py
node/: index.js
python/: checksums.py  config.py  db.py  frame_log.csv  global_mp_logger.py  main.py  messages.py  myLogger.py  myProcesses.py  my_logger_copy.py  my_logger_copy_2.py  my_logger_copy_3.py  my_processes.py  my_relais.py  pyvenv.cfg  queueTest.py  requirements.txt  ringbuffer.py  socketTest.py  tb_events.py  tb_heartbeat.py  tb_ir_process.py  tb_logger.py  tb_main_helper.py  tb_queue_test.py  tb_queues.py  tb_relais.py  tb_relais_mock.py  tb_server_process.py  tb_socket.py  tb_timer.py  tb_user_input.py  tests_runner.py
python/models/: myDataclasses.py  tb_dataclasses.py
python/tb_ir/: 24104186.xml  app_ir.py  camera_control.py
python/tb_ir_spezific.py/: app_ir.py  camera_control.py  frame_database.py
python/tests/: test_myLogger.py  test_myProcesses.py
typings/socketio/: admin.pyi  asgi.pyi  async_aiopika_manager.pyi  async_client.pyi  async_manager.pyi  async_redis_manager.pyi  async_simple_client.pyi  base_client.pyi  base_manager.pyi  base_namespace.pyi  base_server.pyi  client.pyi  middleware.pyi  namespace.pyi  packet.pyi  (+4 more)
(+89 files in other folders)
